Added support for raw sql query executor
